# cat-wgpu

./: Cargo.toml  README.md
.github/workflows/: docs.yml
examples/: vector_add.rs
kernels/: vector_add.wgsl
src/: device.rs  error.rs  kernel.rs  launch.rs  lib.rs  memory.rs  slipstream.rs
src/runtime/: backend.rs  mod.rs
